Fixed tearline image file and update timeline mobile. On mobile, timeline now shows all cards to the right side

--- a/src/components/css/timeline.css
+++ b/src/components/css/timeline.css
@@ -1,3 +1,11 @@
+.mobile {
+    display: none;
+}
+
+.desktop {
+    display: display;
+}
+
 .container {
     float: center;
     padding-left: 32px;
@@ -204,6 +212,15 @@ h4 {
 }
 
 @media screen and (max-width: 600px) {
+
+    .mobile {
+        display: block;
+    }
+
+    .desktop {
+        display: none;
+    }
+
     .container {
         float: center;
         padding-left: 8px;
@@ -224,7 +241,7 @@ h4 {
         content: " ";
         width: 3px;
         background-color: #eeeeee;
-        left: 50%;
+        left: 5%;
         margin-left: -1.5px;
     }
 
@@ -254,7 +271,7 @@ h4 {
     }
 
     .timeline>li>.timeline-panel {
-        width: 43%;
+        width: 88%;
         float: left;
         border: 1px solid #d4d4d4;
         border-radius: 2px;
@@ -297,7 +314,7 @@ h4 {
         text-align: center;
         position: absolute;
         top: 27px;
-        left: 50%;
+        left: 5%;
         margin-left: -15px;
         background-color: #999999;
         z-index: 100;
